--- a/src/index.html
+++ b/src/index.html
@@ -131,6 +131,32 @@
             };
       };
 
+      // { [nip21: `nostr:${string}`]: Event<number> }[] を返す
+      const fetchResourceEvents = async (document) => {
+        const nip21s = [
+          ...document.querySelectorAll(
+            "script[src^='nostr:'], link[href^='nostr:'], img[src^='nostr:']"
+          ),
+        ].map((el) => el.src || el.href);
+
+        const pool = new window.NostrTools.SimplePool();
+        const filters = nip21s.map(createFilter);
+        const events = await pool.list(relays, filters);
+        await pool.close(relays);
+
+        return nip21s.reduce((acc, obj) => {
+          const { type, data } = window.NostrTools.nip21.parse(obj).decoded;
+          const event = events.find((event) =>
+            type === "nevent"
+              ? event.id == data.id
+              : event.kind == data.kind &&
+                event.pubkey == data.pubkey &&
+                findTag(event, "d")[1] == data.identifier
+          );
+          return { ...acc, [obj]: event };
+        }, {});
+      };
+
       const findTag = (event, tagName) =>
         event?.tags.find((tag) => tag[0] == tagName);
 
