nostr-tools のバージョンを 1.17.0 に固定する
Closes #56

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
       </ul>
     </div>
 
-    <script src="https://unpkg.com/nostr-tools/lib/nostr.bundle.js"></script>
+    <script src="https://unpkg.com/nostr-tools@1.17.0/lib/nostr.bundle.js"></script>
     <script>
       const relays = [
         "wss://nos.lol",
