Revert "エスケープされた HTML エンティティーのアンエスケープを修正する"
This reverts commit d90b0a5f9f7670c82984b762693609639793289c.

--- a/src/index.html
+++ b/src/index.html
@@ -189,9 +189,9 @@
 
               resolve(
                 unescapeXML(
-                  new XMLSerializer()
-                    .serializeToString(virtualDom.contentWindow.document)
-                    .replace(/&/g, "&amp;")
+                  new XMLSerializer().serializeToString(
+                    virtualDom.contentWindow.document
+                  )
                 )
               );
             })
