--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,11 @@
       </button>
     </div>
     <iframe id="iframe" class="grow m-0 p-0"></iframe>
-    <iframe id="virtualDom" class="hidden" sandbox="allow-same-origin"></iframe>
+    <iframe
+      id="virtualDom"
+      class="hidden"
+      sandbox="allow-scripts allow-same-origin"
+    ></iframe>
 
     <div
       id="dropdown"
