Revert "Blocked script execution in 'about:srcdoc' because the document's frame is sandboxed and the 'allow-scripts' permission is not set. を修正する"
This reverts commit 4bf39d8ccc982d297f9e54548425ac350f75efe3.

--- a/src/index.html
+++ b/src/index.html
@@ -81,11 +81,7 @@
       </button>
     </div>
     <iframe id="iframe" class="grow m-0 p-0"></iframe>
-    <iframe
-      id="virtualDom"
-      class="hidden"
-      sandbox="allow-scripts allow-same-origin"
-    ></iframe>
+    <iframe id="virtualDom" class="hidden" sandbox="allow-same-origin"></iframe>
 
     <div
       id="dropdown"
