--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         disabled="true"
         class="w-8 h-8 rounded-full mr-1 text-gray-400"
       >
-        <i class="fas fa-arrow-left"></i>
+        <i class="fas fa-arrow-left fa-sm"></i>
       </button>
       <button
         id="forward"
@@ -49,7 +49,7 @@
         disabled="true"
         class="w-8 h-8 rounded-full text-gray-400"
       >
-        <i class="fas fa-arrow-right"></i>
+        <i class="fas fa-arrow-right fa-sm"></i>
       </button>
       <input
         id="uri"
@@ -69,7 +69,7 @@
         onclick="handleMenuClick(event)"
         class="w-8 h-8 rounded-full ml-2 hover:bg-gray-200"
       >
-        <i class="fas fa-ellipsis-vertical"></i>
+        <i class="fas fa-ellipsis-vertical fa-sm"></i>
       </button>
     </div>
     <div class="flex pb-2 px-2 border-b border-gray-300">
@@ -77,7 +77,7 @@
         onclick="handleBookmarkClick()"
         class="inline-flex items-center rounded-full px-2 py-1 hover:bg-gray-200"
       >
-        <i class="fas fa-globe-americas me-2"></i>Broogle
+        <i class="fas fa-globe-americas fa-sm me-2"></i>Broogle
       </button>
     </div>
     <iframe id="iframe" class="grow m-0 p-0"></iframe>
