--- a/src/index.html
+++ b/src/index.html
@@ -229,9 +229,9 @@
         xml
           .replace(/&lt;/g, "<")
           .replace(/&gt;/g, ">")
-          .replace(/&amp;/g, "&")
           .replace(/&quot;/g, '"')
-          .replace(/&apos;/g, "'");
+          .replace(/&apos;/g, "'")
+          .replace(/&amp;/g, "&");
 
       const updateNavigationButtonClass = (button) => {
         button.disabled
