--- a/src/index.html
+++ b/src/index.html
@@ -65,9 +65,15 @@
         Go
       </button>
       <button
+        onclick="handleCommentClick()"
+        class="w-8 h-8 rounded-full ml-2 hover:bg-gray-200"
+      >
+        <i class="fas fa-comment fa-sm"></i>
+      </button>
+      <button
         id="menu"
         onclick="handleMenuClick(event)"
-        class="w-8 h-8 rounded-full ml-2 hover:bg-gray-200"
+        class="w-8 h-8 rounded-full ml-1 hover:bg-gray-200"
       >
         <i class="fas fa-ellipsis-vertical fa-sm"></i>
       </button>
@@ -80,7 +86,13 @@
         <i class="fas fa-globe-americas fa-sm me-2"></i>Broogle
       </button>
     </div>
-    <iframe id="iframe" class="grow m-0 p-0"></iframe>
+    <div class="flex grow overflow-hidden">
+      <iframe id="iframe" class="grow m-0 p-0"></iframe>
+      <div
+        id="comments"
+        class="w-[600px] hidden overflow-auto border-l border-gray-300"
+      ></div>
+    </div>
     <iframe id="virtualDom" class="hidden" sandbox="allow-same-origin"></iframe>
 
     <div
@@ -238,6 +250,8 @@
               updateNavigationButtonClass(forward);
               document.querySelector("#uri").value = nip19;
 
+              comments.innerHTML = "";
+
               event.kind == 5392 || event.kind == 35392
                 ? (iframe.srcdoc = await normalizeHtml(event))
                 : (async () => {
@@ -247,6 +261,17 @@
                       `about:srcdoc#${event.id}`
                     );
                   })();
+
+              // nocomment
+              const script = Object.assign(document.createElement("script"), {
+                src: "https://nocomment.fiatjaf.com/embed.js",
+                id: "nocomment",
+              });
+              script.dataset.customBase = nip19;
+              script.dataset.owner = window.NostrTools.nip19.npubEncode(
+                event.pubkey
+              );
+              comments.appendChild(script);
             })()
           : window.open(
               `https://njump.me/${window.NostrTools.nip19.neventEncode({
@@ -287,6 +312,8 @@
       const handleBookmarkClick = (uri) => open(uri);
 
       const handleClick = async () => await open(uri.value);
+
+      const handleCommentClick = () => comments.classList.toggle("hidden");
 
       const handleForwardClick = async () => {
         const uri = history.forward();
@@ -345,16 +372,17 @@
 
       setInterval(
         () =>
-          iframe.contentWindow.document
-            .querySelectorAll("a")
-            .forEach((a) =>
-              a.addEventListener(
-                "click",
-                a.href.startsWith("nostr:")
-                  ? handleNostrLinkClick
-                  : handleLinkClick
-              )
-            ),
+          [
+            ...iframe.contentWindow.document.querySelectorAll("a"),
+            ...comments.querySelectorAll("a"),
+          ].forEach((a) =>
+            a.addEventListener(
+              "click",
+              a.href.startsWith("nostr:")
+                ? handleNostrLinkClick
+                : handleLinkClick
+            )
+          ),
         2000
       );
 
