Long-form Content をブックマークに追加する

--- a/src/index.html
+++ b/src/index.html
@@ -81,9 +81,16 @@
     <div class="flex pb-2 px-2 border-b border-gray-300">
       <button
         onclick="handleBookmarkClick('naddr1qqrkyun0dankcegzyq9z7xwurgv90ykrkqmk78tln9cjjh5fx2txcwtexkjamhg52x395qcyqqqg5sq7raumy')"
-        class="inline-flex items-center rounded-full px-2 py-1 hover:bg-gray-200"
+        class="inline-flex items-center rounded-full px-2 py-1 hover:bg-gray-200 mr-1"
       >
         <i class="fas fa-globe-americas fa-sm me-2"></i>Broogle
+      </button>
+      <button
+        onclick="handleBookmarkClick('naddr1qvzqqqr4gupzqwlsccluhy6xxsr6l9a9uhhxf75g85g8a709tprjcn4e42h053vaqqyrze35vscrzvfcnx3g2h')"
+        class="inline-flex items-center rounded-full px-2 py-1 hover:bg-gray-200"
+      >
+        <i class="fas fa-globe-americas fa-sm me-2"></i>How to do curation and
+        businesses on Nostr
       </button>
     </div>
     <div class="flex grow overflow-hidden">
