--- a/src/index.html
+++ b/src/index.html
@@ -271,7 +271,7 @@
 
               // nocomment
               const script = Object.assign(document.createElement("script"), {
-                src: "https://nocomment.fiatjaf.com/embed.js",
+                src: "../nocomment/embed.js",
                 id: "nocomment",
               });
               script.dataset.customBase = nip19;
