「About Brostr」を折り返さないように修正する

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
       <ul class="py-2">
         <li>
           <a
-            class="block px-4 py-2 hover:bg-gray-200 cursor-pointer"
+            class="block px-4 py-2 whitespace-nowrap hover:bg-gray-200 cursor-pointer"
             onclick="handleAboutBrostrClick(event)"
             >About Brostr</a
           >
