--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
         <li>
           <a
             class="block px-4 py-2 whitespace-nowrap hover:bg-gray-200 cursor-pointer"
-            onclick="handleAboutBrostrClick(event)"
+            onclick="handleBookmarkClick('nevent1qqst7mtcr7smjue7qgn4m0we5p5juhh93ejsxer2sg4eexzkzs65luchfpxzx')"
             >About Brostr</a
           >
         </li>
@@ -340,13 +340,6 @@
         script.dataset.customBase = nip19;
         script.dataset.owner = window.NostrTools.nip19.npubEncode(event.pubkey);
         comments.appendChild(script);
-      };
-
-      const handleAboutBrostrClick = () => {
-        open(
-          "nevent1qqst7mtcr7smjue7qgn4m0we5p5juhh93ejsxer2sg4eexzkzs65luchfpxzx"
-        );
-        return false;
       };
 
       const handleBackClick = async () => {
